bk_ida/gccida/c1/check_format_info_main
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2085:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *info, 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2091:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *v8; // r14 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2125:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *v43; // r15 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2148:7: error: must use 'enum' tag to refer to type 'format_std_version'
const format_std_version *p_double_std; // rdx 
      ^
      enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2166:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version std; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2175:1: error: must use 'enum' tag to refer to type 'format_std_version'
format_std_version v93; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2205:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *v123; // r12 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2221:1: error: unknown type name 'function_format_info_0'; did you mean 'function_format_info'?
function_format_info_0 *v139; // [rsp+28h] [rbp-2A0h] 
^~~~~~~~~~~~~~~~~~~~~~
function_format_info
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:85:3: note: 'function_format_info' declared here
} function_format_info;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2228:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *types; // [rsp+60h] [rbp-268h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2240:1: error: unknown type name 'format_wanted_type_0'; did you mean 'format_wanted_type'?
format_wanted_type_0 *v158; // [rsp+B8h] [rbp-210h] 
^~~~~~~~~~~~~~~~~~~~
format_wanted_type
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:578:3: note: 'format_wanted_type' declared here
} format_wanted_type;
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2448:31: error: expected expression
v43 = ( format_wanted_type_0 *)&v177; 
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2448:9: error: use of undeclared identifier 'format_wanted_type_0'
v43 = ( format_wanted_type_0 *)&v177; 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2457:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[v36] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2468:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v36] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2498:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)v44[1]] & 4) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2500:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[( unsigned __int8)*format] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2508:11: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
while ( ( sch_istable[v47] & 4) != 0 ); 
          ^~~~~~~~~~~
          _sch_istable
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2590:33: error: expected expression
types = ( format_wanted_type_0 *)&v170; 
                                ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/c-format.c:2590:11: error: use of undeclared identifier 'format_wanted_type_0'
types = ( format_wanted_type_0 *)&v170; 
          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/check_format_info_main/src/obj/c-format.o] Error 1
